Refactor ImageDefinitionFunctionalTest